--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 .idea
 .build/
 */build/
+.gradle/*
+/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+/.gradle/buildOutputCleanup/cache.properties
+/.gradle/8.4/checksums/checksums.lock
+/.gradle/8.4/dependencies-accessors/dependencies-accessors.lock
+/.gradle/8.4/executionHistory/executionHistory.bin
+/.gradle/8.4/executionHistory/executionHistory.lock
+/.gradle/8.4/fileHashes/fileHashes.bin
+/.gradle/8.4/fileHashes/fileHashes.lock
+/.gradle/8.4/dependencies-accessors/gc.properties
+/.gradle/8.4/gc.properties
+/.gradle/vcs-1/gc.properties
+/.gradle/8.4/fileChanges/last-build.bin
+/.gradle/buildOutputCleanup/outputFiles.bin
+/.gradle/8.4/fileHashes/resourceHashesCache.bin
